# personal-ezra

./: .dockerignore  .env.example  .eslintrc.cjs  .gitignore  CHANGELOG_FIXES.md  Dockerfile  README.md  build-run.ps1  index.html  install-tauri-win.ps1  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/workflows/: deploy.yml  release.yml
patches/: @tauri-apps__api.patch
public/: manifest.webmanifest
scripts/: kill-port.cjs
src/: App.tsx  env.ts  index.css  main.tsx  routes.tsx  tauri-fs-impl.ts  tauri-fs-stub.ts  tauri-stronghold-stub.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.conf.json5
src-tauri/capabilities/: default.json  dialog.json  external-open.json  fs-appdata.json  sqlite.json
src-tauri/icons/: icon.icns
src-tauri/installer/nsis/: SimpChinese.nsh
src-tauri/sql/: schema.sql
src-tauri/src/: main.rs  notes.rs
src/components/: AppErrorBoundary.tsx  AppLayout.tsx  AvatarUploader.tsx  CommandK.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ContextMenu.tsx  CopyButton.tsx  DetailsDrawer.tsx  Empty.tsx  FabTools.tsx  FixedUrl.tsx  ImportExportModal.tsx  ItemCard.tsx  ItemForm.tsx  MdEditor.tsx  PasswordFieldWithStrength.tsx  PasswordHealthBanner.tsx  QuickAdd.tsx  Sidebar.tsx  Skeleton.tsx  TagFilter.tsx  TagPicker.tsx  TagRow.tsx  Toast.tsx  ToastHub.tsx  ToastProvider.tsx  TokenFilter.tsx  Topbar.tsx  UserMenu.tsx  VaultItemCard.tsx  VaultItemList.tsx
src/hooks/: useItemList.ts  (+7 more)
tests/: app-navigation.test.tsx  auth-github.test.ts  backup.test.ts  database.test.ts  env-detection.test.ts  github-backup.test.ts  idle-lock.test.ts  inspiration-notes.test.ts  inspiration-panel-link-preview.test.tsx  inspiration-panel.test.tsx  local-backup-section.test.tsx  notes-page.web.test.tsx  settings-updater.test.tsx  smoke.test.ts  vitest.setup.ts
(+117 files in other folders)
