[package]
name = "Personal"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
tauri = { version = "2.8.5", features = [] }
tauri-plugin-shell = "2.3.1"
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.0"
tauri-plugin-sql = { version = "2.3.0", features = ["sqlite"] }
tauri-plugin-updater = "2.9.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
notify = "6"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
